Closed
Bug 1664608
Opened 5 years ago
Closed 5 years ago
--with-system-zlib build fails with dom/indexedDB/ActorsParent.cpp:144:10: fatal error: 'mozzconf.h' file not found
Categories
(Core :: Storage: IndexedDB, defect)
Core
Storage: IndexedDB
Tracking
()
RESOLVED
FIXED
82 Branch
| Tracking | Status | |
|---|---|---|
| firefox82 | --- | fixed |
People
(Reporter: jbeich, Assigned: sg)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
mozzconf.h isn't part of public API unlike zconf.h. Given both aren't used much in the tree maybe switch to zlib.h or drop if unused.
$ c++ --version
FreeBSD clang version 11.0.0 (git@github.com:llvm/llvm-project.git llvmorg-11.0.0-rc2-0-g414f32a9e86)
Target: x86_64-unknown-freebsd13.0
Thread model: posix
InstalledDir: /usr/bin
$ echo "ac_add_options --with-system-zlib" >>.mozconfig
$ ./mach build
[...]
dom/indexedDB/ActorsParent.cpp:144:10: fatal error: 'mozzconf.h' file not found
#include "mozzconf.h"
^~~~~~~~~~~~
1 error generated.
| Assignee | ||
Comment 1•5 years ago
|
||
It seems to be unused, sorry for that.
| Assignee | ||
Comment 2•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → sgiesecke
Status: NEW → ASSIGNED
| Assignee | ||
Comment 3•5 years ago
|
||
Pushed by sgiesecke@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4f6dc52d4c36
Fix formatting. r=dom-workers-and-storage-reviewers,janv
https://hg.mozilla.org/integration/autoland/rev/977f754adfe3
Remove invalid and unused include for mozzconf.h. r=dom-workers-and-storage-reviewers,janv
Comment 5•5 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/4f6dc52d4c36
https://hg.mozilla.org/mozilla-central/rev/977f754adfe3
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
Updated•4 years ago
|
Keywords: regression
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•