dom/indexedDB/ActorsParent.cpp
@@ -9025,7 +9025,7 @@ void ConnectionPool::ScheduleQueuedTransactions(ThreadInfo aThreadInfo) {
 
   const auto foundIt = std::find_if(
       mQueuedTransactions.begin(), mQueuedTransactions.end(),
-      [& me = *this](const auto& queuedTransaction) {
+      [&me = *this](const auto& queuedTransaction) {
         return !me.ScheduleTransaction(*queuedTransaction,
                                        /* aFromQueuedTransactions */ true);
       });
@@ -9147,7 +9147,7 @@ void ConnectionPool::NoteClosedDatabase(DatabaseInfo& aDatabaseInfo) {
   mCompleteCallbacks.RemoveLastElements(
       mCompleteCallbacks.end() -
       std::remove_if(mCompleteCallbacks.begin(), mCompleteCallbacks.end(),
-                     [& me = *this](const auto& completeCallback) {
+                     [&me = *this](const auto& completeCallback) {
                        return me.MaybeFireCallback(completeCallback.get());
                      }));
 
@@ -9169,7 +9169,7 @@ bool ConnectionPool::MaybeFireCallback(DatabasesCompleteCallback* aCallback) {
 
   if (std::any_of(aCallback->mDatabaseIds.begin(),
                   aCallback->mDatabaseIds.end(),
-                  [& databases = mDatabases](const auto& databaseId) {
+                  [&databases = mDatabases](const auto& databaseId) {
                     MOZ_ASSERT(!databaseId.IsEmpty());
 
                     return databases.Get(databaseId);
@@ -21497,7 +21497,7 @@ ObjectStoreGetRequestOp::GetPreprocessParams() {
         std::make_move_iterator(mResponse.end()),
         MakeBackInserter(preprocessInfos),
         [](const auto& info) { return info.HasPreprocessInfo(); },
-        [& self = *this](StructuredCloneReadInfoParent&& info) {
+        [&self = *this](StructuredCloneReadInfoParent&& info) {
           return self.ConvertResponse<PreprocessInfo>(std::move(info));
         }));
 
